# chilla

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  bun.lockb  bun.nix  flake.nix  index.html  install.sh  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.json  tsconfig.tauri-e2e.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
.agents/: settings.json
.agents/agents/: check-and-test-after-modify.md  git-commit.md  rust-coding.md  ts-coding.md
.agents/marketplace/.claude-plugin/: marketplace.json
.agents/scripts/: format-ts.sh
.agents/skills/browser-verification/: SKILL.md
.github/workflows/: ci.yml  release-macos-dmg.yml
.ign/: ign-files.json  ign-var.json  ign.json
design-docs/references/: README.md
design-docs/specs/: architecture.md  command.md  design-csv-viewer.md  design-epub-navigation.md  design-file-viewer-mode.md  design-macos-dmg-release.md  design-markdown-workbench.md  notes.md
e2e/: file-browser-keyboard.pw.ts
impl-plans/: README.md
impl-plans/active/: file-viewer-mode.md  macos-dmg-release.md  markdown-workbench-first-slice.md
impl-plans/completed/: browser-tests-to-tauri-e2e.md  csv-viewer.md  epub-navigation-and-location.md  file-view-mixed-stack-validation.md  file-viewer-mode.md  in-app-multi-file-open.md  linux-ci-nix-flake-and-bun.md  linux-tauri-e2e-github-actions.md  linux-tauri-e2e-webdriver.md  macos-dmg-release.md  markdown-editor-save-and-conflict.md  markdown-workbench-first-slice.md  real-runtime-only-verification.md
release/: README.md
scripts/: run-tauri-e2e-linux.sh
src/: lib.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  error.rs  events.rs  lib.rs  main.rs  media_stream.rs  mp4_faststart.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/commands/: document.rs
src-tauri/src/document/: service.rs  types.rs
src-tauri/src/markdown/: mod.rs
src-tauri/src/syntax_highlight/: mod.rs
src-tauri/src/viewer/: csv.rs  epub.rs  mod.rs  service.rs  types.rs
src-tauri/src/watcher/: service.rs
src/app/: App.css  App.tsx
src/lib/: clipboard.ts  epub-location.ts  keyboard.ts  platform.ts  theme.ts
tests/browser/: app-markdown-dark.browser.tsx  preview.browser.tsx  workspace.browser.tsx
tests/tauri/: epub-pagination.e2e.ts  epub-preview.e2e.ts  epub-toc-location.e2e.ts  tauri-smoke.e2e.ts
(+42 files in other folders)
