[package]
name = "marky"
version = "0.1.0"
edition = "2021"
description = "A Rust project"

homepage = "https://github.com/user/repo"
repository = "https://github.com/user/repo"
license = "MIT"
readme = "README.md"

[dependencies]
# Add your dependencies here

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "marky"
path = "src/main.rs"

[lib]
name = "marky"
path = "src/lib.rs"
