[package]
name = "marky"
version = "0.1.0"
description = "A Tauri markdown workbench"
edition = "2021"

[lib]
name = "marky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blake3 = "1"
notify = "8"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
