[package]
name = "chilla"
version = "0.1.2"
description = "A Tauri markdown workbench"
edition = "2021"

[lib]
name = "chilla_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blake3 = "1"
notify = "8"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5.3", default-features = false, features = [
  "default-fancy",
  "html",
  "dump-load",
] }
tauri = { version = "2", features = ["custom-protocol", "protocol-asset"] }
tauri-plugin-opener = "2.5.3"
thiserror = "2"
tree_magic_mini = "3.2.2"
